--- a/UserEasyInvoker/easyInvoker.invokeKey.json
+++ b/UserEasyInvoker/easyInvoker.invokeKey.json
@@ -167,7 +167,7 @@
     }, 
     {
       "args": [
-        "\"C:\\Users\\Administrator\\AppData\\Roaming\\Sublime Text 3\\Packages\\ClangAutoComplete\\ClangAutoComplete.py\""
+        "\"E:\\Tmp\\TestMake\\TestMake\\CMakeLists.txt\""
       ], 
       "opts": [
         "Window", 
