--- a/UserEasyInvoker/easyInvoker.invokeKey.json
+++ b/UserEasyInvoker/easyInvoker.invokeKey.json
@@ -38,12 +38,25 @@
     },
     {
       "invoker": "Cmd",
-      "opts": ["wait"],
+      "opts": [
+        "wait"
+      ],
       "args": [
         "python",
         "${file}"
       ],
-      "key": "p"
+      "key": "p3"
+    },
+    {
+      "invoker": "Cmd",
+      "opts": [
+        "wait"
+      ],
+      "args": [
+        "C:\\Python27\\python.exe",
+        "${file}"
+      ],
+      "key": "p2"
     },
     {
       "invoker": "Cmd",
@@ -193,7 +206,7 @@
         "open_file"
       ],
       "args": [
-        "\"C:\\Users\\Administrator\\AppData\\Roaming\\Sublime Text 3\\Packages\\CppByStorm\\CppByStorm.sublime-syntax\""
+        "\"C:\\Users\\Administrator\\AppData\\Roaming\\Sublime Text 3\\Packages\\UserSyntax\\CppByStorm.sublime-syntax\""
       ]
     },
     {
